# vita3Dtest

./: CMakeLists.txt  README.md
assets/: DATNIGHTS-0.mtl
src/: main.c  obj_loader.c  obj_loader.h
